--- a/packages/react-native-nitro-location/package.json
+++ b/packages/react-native-nitro-location/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\" --fix",
     "lint-ci": "eslint \"**/*.{js,ts,tsx}\" -f @jamesacarr/github-actions",
     "typescript": "tsc --noEmit false",
-    "specs": "bun run --filter=\"**\" typescript && bun nitro-codegen --logLevel=\"debug\""
+    "specs": "nitro-codegen"
   },
   "keywords": [
     "react-native",
