--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-nitro-location": "../packages/react-native-nitro-location"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,6 +28,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-nitro-modules": "^0.9.2",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
